# OpenGLBasic

./: CMakeLists.txt  README.md  glad.c  window.cpp
include/: GLFW  glad
